Changes in draft according to the feedback of co-authors

--- a/report/pers_schedule/biometrics_submission/bibliography.bib
+++ b/report/pers_schedule/biometrics_submission/bibliography.bib
@@ -9,6 +9,17 @@ year={2015},
 publisher={Elsevier}
 }
 
+@article{nieboer2015nonlinear,
+  title={Nonlinear modeling was applied thoughtfully for risk prediction: the {Prostate Biopsy Collaborative Group}},
+  author={Nieboer, Daan and Vergouwe, Yvonne and Roobol, Monique J and Ankerst, Donna P and Kattan, Michael W and Vickers, Andrew J and Steyerberg, Ewout W and Group, Prostate Biopsy Collaborative},
+  journal={Journal of clinical epidemiology},
+  volume={68},
+  number={4},
+  pages={426--434},
+  year={2015},
+  publisher={Elsevier}
+}
+
 @article{zhang2012optimization,
   title={Optimization of prostate biopsy referral decisions},
   author={Zhang, Jingyu and Denton, Brian T and Balasubramanian, Hari and Shah, Nilay D and Inman, Brant A},
