--- a/report/pers_schedule/biometrics_submission/mainmatter/_NOT_IN_PAPER_.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/_NOT_IN_PAPER_.tex
@@ -1,3 +1,5 @@
+The burden of unnecessary biopsies is not only medical but also financial. \citet{keegan2012active} have shown that annual schedules can cost more than the treatment (brachytherapy or prostatectomy) to AS programs, and if biopsies were to be conducted every other year, then up to 28\% increase in savings per head from AS over treatment could be achieved. Despite this, several AS programs employ the annual schedule \citep{tosoian2011active,welty2015extended}.
+
 \subsubsection{Scheduling multiple biopsies}
 \label{subsubsec : pers_sched_algorithm}
 Scheduling biopsies using personalized schedules is an iterative process. Only one biopsy is scheduled at once, using all the information available up to that point in time. The information is manifested via the predictive distribution $g(T^*_j)$. It is important to note that new biopsy times are only proposed when the patient visits the hospital for a PSA measurement or for biopsy, since $g(T^*_j)$ is updated only at these time points. If a biopsy is conducted at time $t$, then scheduling the next biopsy at time $u \geq \text{max}(t,s)$ for patient $j$ is the goal. Although the predictive distribution $g(T^*_j)$ is updated with the new information $T^*_j > t$, there are a couple of restrictions on time $u$, namely:
