--- a/report/pers_schedule/biometrics_submission/mainmatter/abstract.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/abstract.tex
@@ -1,5 +1,5 @@
 % !TEX root =  ../pers_schedules.tex 
 
 \begin{abstract}
-Low risk prostate cancer patients enrolled in active surveillance (AS) programs have to undergo biopsies on a frequent basis for examination of disease progression. Majority of the AS programs worldwide employ fixed schedules of biopsies for all patients. It has been found that such fixed and frequent schedules discourage patients to receive biopsies, and also bring a financial burden on the healthcare systems. Motivated by the world's largest AS program PRIAS, in this paper we present personalized schedules for biopsies to counter these problems. Using joint models for time to event and longitudinal data, our methods combine information from previous biopsy results and historical prostate-specific antigen (PSA) levels of a patient, to schedule the next biopsy. We also present criteria to compare the efficacy of personalized schedules with that of existing biopsy schedules, and a method to select the optimal schedule.
+Low risk prostate cancer (PCa) patients enrolled in active surveillance (AS) programs commonly undergo biopsies on a frequent basis for examination of PCa progression. AS programs employ fixed schedules of biopsies for all patients. Such fixed and frequent schedules, schedule unnecessary biopsies for patients with slowly progressing cancer. Since biopsies have an associated risk of complications, such patients may not always comply with the schedule, which increases the risk of delayed detection of PCa progression. Motivated by the world's largest AS program, Prostate Cancer Research International Active Surveillance (PRIAS), in this paper we present personalized schedules for biopsies to counter these problems. Using joint models for time to event and longitudinal data, our methods combine information from historical prostate-specific antigen (PSA) levels and repeat biopsy results of a patient, to schedule the next biopsy. We also present methods to compare personalized schedules with  existing biopsy schedules.
 \end{abstract}
