--- a/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/pers_sched_framework/pers_biopsy_framework.tex
@@ -9,19 +9,19 @@ Once a joint model for GR and PSA levels is obtained, the next step is to use it
 
 \subsection{Algorithm}
 \label{subsec : pers_sched_algorithm}
-The aforementioned personalized schedules, schedule biopsy at a time $u > \mbox{max}(t,s)$. However, if time $u < T^*_j$, then GR is not detected at $u$ and at least one more biopsy is required at an optimal time $u^{new} > \mbox{max}(u,s)$. This process is iteratively repeated until GR is detected. To aid in medical decision making, we elucidate this process via an algorithm in Figure \ref{fig : sched_algorithm}. Since it is required by PRIAS that biopsies are conducted at a gap of at least one year, when $u - t < 1$, the algorithm postpones $u$ to $t + 1$, because it is the time nearest to $u$, at which the one year gap condition is satisfied.
+The aforementioned personalized schedules, schedule biopsy at a time $u > \mbox{max}(t,s)$. However, if time $u < T^*_j$, then GR is not detected at $u$ and at least one more biopsy is required at an optimal time $u^{new} > \mbox{max}(u,s)$. This process is iteratively repeated until GR is detected. To aid in medical decision making, we elucidate this process via an algorithm in Figure \ref{fig : sched_algorithm}. Since it is medically required that biopsies are conducted at a gap of at least one year, when $u - t < 1$, the algorithm postpones $u$ to $t + 1$, because it is the time nearest to $u$, at which the one year gap condition is satisfied.
 
 %When submitting replace figure with figure* to make it span an entire column
 %With referee option it gives an error
 
-\begin{figure}
-\label{fig : sched_algorithm}
-\centerline{\input{mainmatter/pers_sched_framework/algorithm}}
-\caption{Algorithm for creating a personalized schedule for patient $j$. The time of the latest biopsy is denoted by $t$. The time of the latest available PSA measurement is denoted by $s$. The proposed personalized time of biopsy is denoted by $u$.  The time at which a repeat biopsy was proposed on the last visit to the hospital is denoted by $u^{pv}$. The time of the next visit for the measurement of PSA is denoted by $T^{nv}$.} 
-\end{figure}
-
-%\begin{figure*}
+%\begin{figure}
+%\centerline{\input{mainmatter/pers_sched_framework/algorithm}}
+%\caption{Algorithm for creating a personalized schedule for patient $j$. The time of the latest biopsy is denoted by $t$. The time of the latest available PSA measurement is denoted by $s$. The proposed personalized time of biopsy is denoted by $u$.  The time at which a repeat biopsy was proposed on the last visit to the hospital is denoted by $u^{pv}$. The time of the next visit for the measurement of PSA is denoted by $T^{nv}$.} 
 %\label{fig : sched_algorithm}
-%\centerline{\input{mainmatter/pers_sched_framework/algorithm_two_col}}
-%\caption{Algorithm for creating a personalized schedule for patient $j$. $t$ denotes the time of the latest biopsy. $s$ denotes the time of the latest available PSA measurement. $u$ denotes the proposed personalized time of biopsy.  $u^{pv}$ denotes the time at which a repeat biopsy was proposed on the last visit to the hospital. $T^{nv}$ denotes the time of the next visit for measurement of PSA.} 
-%\end{figure*}
+%\end{figure}
+
+\begin{figure*}
+\centerline{\input{mainmatter/pers_sched_framework/algorithm_two_col}}
+\caption{Algorithm for creating a personalized schedule for patient $j$. $t$ denotes the time of the latest biopsy. $s$ denotes the time of the latest available PSA measurement. $u$ denotes the proposed personalized time of biopsy.  $u^{pv}$ denotes the time at which a repeat biopsy was proposed on the last visit to the hospital. $T^{nv}$ denotes the time of the next visit for measurement of PSA.} 
+\label{fig : sched_algorithm}
+\end{figure*}
