--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -1,17 +1,17 @@
 % !TEX root =  ../pers_schedules.tex 
 \section{Simulation Study}
 \label{sec: simulation_study}
-The application of personalized schedules for patients from PRIAS demonstrated that the schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedules, because the true time of GR was not known for any of the PRIAS patients. To this end, we have performed a simulation study comparing personalized schedules with PRIAS and annual schedule, the details of which are presented next.
+The application of personalized schedules for patients from PRIAS demonstrated that the schedules adapt according to the historical data of each patient. However we could not perform a full scale comparison between personalized and PRIAS schedules, because the true time of GR was not known for the PRIAS patients. To this end, we conducted a simulation study comparing personalized schedules with PRIAS and annual schedule, the details of which are presented next.
 
 \subsection{Simulation Setup}
 \label{subsec : simulation_setup}
-First we assume a population of patients enrolled in AS, with the same entrance criteria as that of PRIAS. The PSA and hazard of GR for patients from this population follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters (Web Appendix C of the supplementary material) estimated from the joint model fitted to PRIAS dataset. We further assume that there are three equal sized subgroups $G_1$, $G_2$ and $G_3$ of patients in the population, differing in the time of GR. This was done because we wanted to test the efficacy of different schedules for a population with a mixture of patients, namely, those with faster progressing cancer, as well as those with slowly progressing cancer. The time of GR in each subgroup is controlled by a Weibull distributed baseline hazard. The shape and scale parameters $(k, \lambda$) of this distribution for the three subgroups are: $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the variance of time of GR is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ and highest in $G_3$.
+First we assume a population of patients enrolled in AS, with the same entrance criteria as that of PRIAS. The PSA and hazard of GR for patients from this population follows a joint model of the form postulated in Section \ref{subsec : jm_fit_prias}, with parameters equal to the posterior mean of parameters (Web Appendix C of the supplementary material) estimated from the joint model fitted to PRIAS dataset. We further assume that there are three equal sized subgroups $G_1$, $G_2$ and $G_3$ of patients in the population, differing in the time of GR. This was done because we wanted to test the performance of different schedules for a population with a mixture of patients, namely, those with faster progressing PCa, as well as those with slowly progressing PCa. The time of GR in each subgroup is controlled by a Weibull distributed baseline hazard. The shape and scale parameters $(k, \lambda$) of this distribution for the three subgroups are: $(1.5, 4)$, $(3, 5)$ and $(4.5, 6)$ for $G_1, G_2$ and $G_3$, respectively. The effect of these parameters is that the variance of time of GR is highest for $G_1$ and lowest for $G_3$, while the mean GR time is lowest in $G_1$ (faster progressing PCa) and highest in $G_3$ (slowly progressing PCa).
 
 From this population we have sampled 500 datasets with 1000 patients each. Patients are randomly assigned to a subgroup. Further, each dataset is split into a training (750 patients) and a test (250 patients) part. The $k$-th simulated training dataset $\mathcal{D}^k$ is given by $\mathcal{D}^k = \{l_{ki}, r_{ki}, \boldsymbol{y}_{ki}; i = 1, \ldots, 750\}$, where $\boldsymbol{y}_{ki}$ denote the PSA measurements for the $i$-th patient in $\mathcal{D}^k$. The frequency of PSA measurements is same as that in PRIAS. Other than simulating a true GR time $T^*_{ki}$, we also generate a random and non-informative censoring time $C_{ki}$. When $T^*_{ki} < C_{ki}$, then $l_{ki} = r_{ki} = T^*_{ki}$, otherwise $l_{ki} = C_{ki}$ and $r_{ki} = \infty$. For the test patients, censoring time is not generated.
 
-We next fit a joint model of the specification given in (\ref{eq : long_model_prias}) and (\ref{eq : hazard_prias}) to each of the $\mathcal{D}^k, k=1, \ldots, 500$, and obtain a MCMC sample from the posterior distribution $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$. We then obtain $g(T^*_{kl})$ for each of the $l$-th test patient of the $k$-th data set and conduct hypothetical biopsies for him. For every patient we conduct biopsies using the following six types of schedules: personalized schedules based on expected time of GR, median time of GR and dynamic risk of GR, and, a hybrid approach between median time of GR and dynamic risk of GR, PRIAS schedule and annual schedule. The biopsies are conducted iteratively in accordance with the algorithm in Figure \ref{fig : sched_algorithm}. 
+We next fit a joint model of the specification given in (\ref{eq : long_model_prias}) and (\ref{eq : hazard_prias}) to each of the $\mathcal{D}^k, k=1, \ldots, 500$, and obtain a MCMC sample from the posterior distribution $p(\boldsymbol{\theta} \mid \mathcal{D}^k)$. We then obtain $g(T^*_{kl})$ for each of the $l$-th test patient of the $k$-th data set and conduct hypothetical biopsies for him. For every patient we conduct biopsies using the following seven types of schedules (abbreviated names in parenthesis): personalized schedules based on expected time of GR (Exp. GR time) and median time of GR (Med. GR time), personalized schedules based on dynamic risk of GR with $\kappa$ chosen as $\argmax_{\kappa} \mbox{F}_1(t, \Delta t, s)$ (Dyn. risk $\mbox{F}_1$) and a fixed $\kappa = 0.95$ (Dyn. risk 0.95), a hybrid approach between median time of GR and dynamic risk of GR (Hybrid), PRIAS schedule and annual schedule. The biopsies are conducted iteratively in accordance with the algorithm in Figure \ref{fig : sched_algorithm}. 
 
-To compare the aforementioned schedules we require estimates of the various measures of efficacy of schedules (Section \ref{sec : choosing_schedule}). To this end, we compute pooled estimates of each of the $E(N^{bS}_j)$, $\mbox{var}(N^{bS}_j)$, $E(O^S_j)$ and $\mbox{var}(O^S_j)$, as below:
+To compare the aforementioned schedules we require estimates of the various criteria based on offset and number of biopsies conducted to detect GR (Section \ref{sec : choosing_schedule}). To this end, we compute pooled estimates of each of the $E(N^{bS}_j)$, $\mbox{var}(N^{bS}_j)$, $E(O^S_j)$ and $\mbox{var}(O^S_j)$, as below:
 \begin{align*}
 \widehat{E(O^S_j)} &= \frac{\sum_{k=1}^{500} n_k \widehat{E(O^S_k)}}{\sum_{k=1}^{500} n_k}, \\
 \widehat{\mbox{var}(O^S_j)} &= \frac{\sum_{k=1}^{500} (n_k - 1) \widehat{\mbox{var}(O^S_k)}}{\sum_{k=1}^{500} (n_k-1)}, 
@@ -19,7 +19,7 @@ To compare the aforementioned schedules we require estimates of the various meas
 where $n_k$ denotes the number of test patients, $\widehat{E(O^S_k)} = {\sum_{l=1}^{n_k}O^S_{kl}}/{n_k}$ is the estimated mean and $\widehat{\mbox{var}(O^S_k)} = {\sum_{l=1}^{n_k}\big\{O^S_{kl} - \widehat{E(O^S_k)}\big\}^2}/(n_k-1)$ is the estimated variance of the offset for the $k$-th simulation. The estimates for number of biopsies are obtained similarly.
 
 \subsection{Results}
-The pooled estimates of the various measures of efficacy are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition, mean offset is plotted against mean number of biopsies in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that across the methods there is an inverse relationship between $E(N^{bS}_j)$ and $E(O^S_j)$. For example, the annual schedule conducts 5.2 biopsies on average, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{SD}(O^S_j) = \sqrt{\mbox{var}(O^S_j)}$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e., highest $\mbox{SD}(N^{bS}_j) = \sqrt{\mbox{var}(N^{bS}_j)}$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$.
+The pooled estimates of the aforementioned criteria are summarized in Table \ref{table : sim_study_pooled_estimates}. In addition, mean offset is plotted against mean number of biopsies in Figure \ref{fig : meanNbVsOffset}. From the figure it is evident that across the schedules there is an inverse relationship between $E(N^{bS}_j)$ and $E(O^S_j)$. For example, the annual schedule conducts 5.2 biopsies on average to detect GR, which is the highest among all schedules, however it has the least average offset of 6 months as well. On the other hand the schedule based on expected time of GR conducts only 1.9 biopsies on average to detect GR, the least among all schedules, but it also has the highest average offset of 15 months. The schedule based on median time of GR performs similar to that based on expected time of GR. Since the annual schedule attempts to contain the offset within an year it has the least $\mbox{SD}(O^S_j) = \sqrt{\mbox{var}(O^S_j)}$. However to achieve so, it conducts a wide range of number of biopsies from patient to patient, i.e., highest $\mbox{SD}(N^{bS}_j) = \sqrt{\mbox{var}(N^{bS}_j)}$. Schedules based on expected and median time of GR perform the opposite of annual schedule in terms of $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$.
 
 \begin{figure}
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/meanNbVsOffset_all.png}}
@@ -80,9 +80,9 @@ Hybrid       & 4.32            & 8.55                & 1.26          & 5.91     
 \end{tabular}
 \end{table}
 
-The PRIAS schedule conducts only 0.3 biopsies less than annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all aspects. The hybrid approach combines the benefits of methods with low $E(N^{bS}_j)$ and $\mbox{SD}(N^{bS}_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 less biopsies than annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
+The PRIAS schedule conducts only 0.3 biopsies less than the annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all four criteria. The hybrid approach combines the benefits of methods with low $E(N^{bS}_j)$ and $\mbox{SD}(N^{bS}_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 less biopsies than the annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
 
-We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies, conducting 2 extra biopsies in subgroup $G_3$ (highest mean, low variance of GR time) than in $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It performs the best in subgroup $G_3$. For the dynamic risk of GR based schedule and the hybrid approach the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also has a higher offset for $G_3$ than $G_1$.
+We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies conducted to detect GR. It conducts 2 extra biopsies for subgroup $G_3$ (highest mean, low variance of GR time) than in $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It has the highest mean offset for subgroup $G_1$. For the dynamic risk of GR based schedule and the hybrid approach the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also has a higher offset for $G_3$ than $G_1$.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/nbBoxPlot_all.png}}
@@ -96,4 +96,4 @@ We next discuss the performance of these schedules for each of the 3 subgroups $
 \label{fig : offsetBoxPlot_all}
 \end{figure}
 
-The choice of the optimal schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen measures of efficacy. For example, schedule based on dynamic risk of GR is the optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 90\% of the patients have an average offset less than an year (Figure \ref{fig : nbBoxPlot_all} and \ref{fig : offsetBoxPlot_all}). The schedule based on expected time of GR is optimal if on average the least number of biopsies are to be conducted, while simultaneously making sure that at least 80\% of the patients have an average offset less than 2 years. For at least 90\% of the patients it detects GR within 3 years, while conducting 2 biopsies on average. We however recommend the hybrid approach, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of the patients and 36 months for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
+The choice of a suitable schedule using (\ref{eq : loss_func_sim_study_generic}) depends on the chosen criteria for evaluation of schedules. For example, the schedule based on dynamic risk of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 90\% of the patients have an average offset less than one year (Figure \ref{fig : nbBoxPlot_all} and \ref{fig : offsetBoxPlot_all}). The schedule based on expected time of GR is suitable if on average the least number of biopsies are to be conducted to detect GR, while simultaneously making sure that at least 80\% of the patients have an average offset less than two years. For at least 90\% of the patients it detects GR within three years, while conducting two biopsies on average. If a stricter cutoff is required on offset the hybrid approach may be suitable, since it conducts only 3.8 biopsies on average while guaranteeing an offset of 24 months for 95\% of the patients and 36 months for 99.9\% of the patients. Besides if further cutoffs are required on variance of number of biopsies or offset they are not too high either for the hybrid approach.
