--- a/report/pers_schedule/biometrics_submission/pers_schedules.tex
+++ b/report/pers_schedule/biometrics_submission/pers_schedules.tex
@@ -15,8 +15,8 @@
 %  as are almost all equations in the journal.  Use a recent version of the
 %  journal as a guide. 
 %  
-\documentclass[useAMS,usenatbib, referee]{biom}
-%\documentclass[useAMS, usenatbib]{biom}
+%\documentclass[useAMS,usenatbib, referee]{biom}
+\documentclass[useAMS, usenatbib]{biom}
 %
 %  If your system does not have the AMS fonts version 2.0 installed, then
 %  remove the useAMS option.
@@ -86,8 +86,8 @@
 %  the examples below in creating your author and affiliation information.
 %  Also consult a recent issue of the journal for examples of formatting.
 
-\title[Personalized Schedules for Prostate Cancer Biopsies]
-{Personalized Schedules for Prostate Cancer Biopsies}
+\title[Personalized Schedules for Surveillance of Cancer Patients]
+{Personalized Schedules for Surveillance of Cancer Patients}
 
 %  Here are examples of different configurations of author/affiliation
 %  displays.  According to the Biometrics style, in some instances,
@@ -221,7 +221,7 @@ Accepted March} 0000.}
 %
 
 \begin{keywords}
- Active surveillance; Joint models; Personalized medicine; Prostate cancer;.
+ Active surveillance; Joint models; Personalized medicine; Prostate cancer.
 \end{keywords}
 
 %  As usual, the \maketitle command creates the title and author/affiliations
