easy explanation of results for subgroups

--- a/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
+++ b/report/pers_schedule/biometrics_submission/mainmatter/sim_study.tex
@@ -82,7 +82,7 @@ Hybrid       & 4.32            & 8.55                & 1.26          & 5.91     
 
 The PRIAS schedule conducts only 0.3 biopsies less than the annual schedule, but with a higher variance of offset, it does not guarantee early detection for everyone. If we compare the PRIAS schedule with dynamic risk of GR based schedule, we can see that the latter performs better than PRIAS schedule in all four criteria. The hybrid approach combines the benefits of methods with low $E(N^{bS}_j)$ and $\mbox{SD}(N^{bS}_j)$, and methods with low $E(O^S_j)$ and $\mbox{SD}(O^S_j)$. It conducts 1.5 less biopsies than the annual schedule on average and with a $E(O^S_j)$ of 9.7 months it detects GR within an year since its occurrence. Moreover, it has both $\mbox{SD}(N^{bS}_j)$ and $\mbox{SD}(O^S_j)$ comparable to PRIAS.
 
-We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies conducted to detect GR. It conducts 2 extra biopsies for subgroup $G_3$ (highest mean, low variance of GR time) than in $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It has the highest mean offset for subgroup $G_1$. For the dynamic risk of GR based schedule and the hybrid approach the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also has a higher offset for $G_3$ than $G_1$.
+We next discuss the performance of these schedules for each of the 3 subgroups $G_1, G_2$ and $G_3$. We observe that annual schedule remains the most consistent across subgroups in terms of the offset, but it varies the most in terms of number of biopsies conducted to detect GR. It conducts 2 extra biopsies for subgroup $G_3$ (highest mean, low variance of GR time) than $G_1$ (low mean, high variance of GR time). The performance of schedule based on expected time of GR is the most consistent in terms of number of biopsies but most inconsistent in terms of offset. It detects GR the latest for subgroup $G_1$ and earliest for subgroup $G_3$. For the dynamic risk of GR based schedule and the hybrid approach the dynamics are similar to that of the annual schedule. Unlike the latter two schedules, the PRIAS schedule not only conducts more biopsies in $G_3$ than $G_1$ but also detects GR later in $G_3$ than $G_1$.
 
 \begin{figure}[!htb]
 \centerline{\includegraphics[width=\columnwidth]{images/sim_study/nbBoxPlot_all.png}}
